tests/NormalTests/paczka1/fuzzy1/33194194.err
Error in line 1: zBAP S208 81,5
Error in line 16: VHVlkPnV S657 42,8
Error in line 9: S793 S208 77,2
Error in line 19: fW8nyM S208 48,7
Error in line 17: aWLk S793 25,2
Error in line 24: aWLk S657 10,6
Error in line 22: S793 A585 544,7
Error in line 31: D9wn7 S793 96,7
Error in line 32: D9wn7 A585 91,4
Error in line 37: D9wn7 S208 78,9
